Testando os links do menu

--- a/src/main/resources/templates/cargo/cadastro.html
+++ b/src/main/resources/templates/cargo/cadastro.html
@@ -104,7 +104,7 @@
 	                               name="nome" value=""/>
 	                    </div>
 	                    <div class="form-group col-md-4">
-	                        <label for="departamento">Departamento</label>
+	                        <label for="departamento">Departamento</label>	                      
 	                        <select id="departamento" class="form-control" name="departamento">
 	                            <option value="">Selecione</option>
 	                            <option value="3">Administração</option>
@@ -124,7 +124,7 @@
 	
     <footer class="layout-footer">
         <div class="container">
-            <span class="footer-copy">&copy; 2018 MBallem. Todos os direitos reservados.</span>
+            <span class="footer-copy">&copy; 2021 Ezandro Bueno. Todos os direitos reservados.</span>
         </div>
     </footer>
 
