--- a/src/main/resources/templates/funcionario/cadastro.html
+++ b/src/main/resources/templates/funcionario/cadastro.html
@@ -249,7 +249,7 @@
 	
     <footer class="layout-footer">
         <div class="container">
-            <span class="footer-copy">&copy; 2018 MBallem. Todos os direitos reservados.</span>
+            <span class="footer-copy">&copy; 2021 Ezandro Bueno. Todos os direitos reservados.</span>
         </div>
     </footer>	
 
