--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -177,7 +177,7 @@
 	</div>
 		<footer class="layout-footer">
 		<div class="container">
-			<span class="footer-copy">&copy; 2018 MBallem. Todos os direitos reservados.</span>
+			<span class="footer-copy">&copy; 2021 Ezandro Bueno. Todos os direitos reservados.</span>
 		</div>
 	</footer> 
 
