Fragmentado o cabeçalho e rodapé

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,7 +19,7 @@
 	<link href="/css/style.css" rel="stylesheet" />
 </head>
 <body>
-	<header>
+	<header th:replace="fragments/header :: cabecalho">
 		<div>header</div>
 	</header>
 	<div>
@@ -33,7 +33,7 @@
 			<div>conteúdo das páginas</div>
 		</section>
 	</div>
-	<footer>
+	<footer th:replace="fragments/footer :: rodape">
 		<div>footer</div>
 	</footer>
 	
