--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,14 +22,14 @@
 	<header th:replace="fragments/header :: cabecalho">
 		<div>header</div>
 	</header>
-	<div>
+	<div class="layout-main">
 		<aside>
-			<nav>
+			<nav th:replace="fragments/sidebar :: nav-sidebar">
 				<span>menu</span>
 			</nav>
 		</aside>
 		
-		<section>
+		<section layout:fragment="corpo">
 			<div>conteúdo das páginas</div>
 		</section>
 	</div>
