--- a/src/main/resources/templates/departamento/lista.html
+++ b/src/main/resources/templates/departamento/lista.html
@@ -21,6 +21,7 @@
         </nav>
 
         <div class="container" id="listagem">
+        	<div th:replace="fragments/alert"></div>
             <div class="table-responsive">
                 <table class="table table-striped table-hover table-sm">
                     <thead>
@@ -40,7 +41,7 @@
                             </a>
                             <button th:id="${'btn_departamentos/excluir/' + d.id}" type="button" class="btn btn-danger btn-sm"
                             		data-toggle="modal" data-target="#myModal">
-                                <span class="oi oi-circle-x" title="Exclusão desabilitada" aria-hidden="true"></span>
+                                	<span class="oi oi-circle-x" title="Exclusão desabilitada" aria-hidden="true"></span>
                             </button>
                         </td>
                     </tr>
