--- a/src/main/resources/templates/cargo/lista.html
+++ b/src/main/resources/templates/cargo/lista.html
@@ -21,6 +21,7 @@
         </nav>
 
         <div class="container" id="listagem">
+        	<div th:replace="fragments/alert"></div>
             <div class="table-responsive">
                 <table class="table table-striped table-hover table-sm">
                     <thead>
@@ -40,7 +41,8 @@
 	                            <a class="btn btn-info btn-sm" th:href="@{/cargos/editar/{id} (id=${c.id})}" role="button">
 	                                <span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 	                            </a>
-	                            <button type="button" class="btn btn-danger btn-sm" >
+	                            <button th:id="${#strings.concat('btn_cargos/excluir/', c.id)}" type="button" 
+	                            	class="btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal">
 	                                <span class="oi oi-circle-x" title="Exclusão desabilitada" aria-hidden="true"></span>
 	                            </button>
 	                        </td>
@@ -49,6 +51,7 @@
                 </table>
             </div>
         </div>	        
+    	<div th:replace="fragments/modal :: modal"></div>
     </section>
 </body>
 </html>		
