--- a/src/main/resources/templates/funcionario/cadastro.html
+++ b/src/main/resources/templates/funcionario/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout}">
+<html layout:decorate="~{layout}" lang="">
 <head>
     <meta charset="UTF-8"/>
 </head>
@@ -34,8 +34,8 @@
                     </div>
                     
                     <div class="form-group col-md-6">
-                        <label for="salario">Salário Bruto</label>
-                        <input type="text" class="form-control" id="salario" data-mask="#.##0,00"
+						<label for="salario">Salário Bruto</label> <input type="text"
+							class="form-control" id="salario" data-mask="#.##0,00"
                                data-mask-reverse="true" th:field="*{salario}"/>
                         <div class="invalid-feedback"></div>
                     </div>
