--- a/src/main/resources/templates/funcionario/cadastro.html
+++ b/src/main/resources/templates/funcionario/cadastro.html
@@ -24,7 +24,8 @@
 
         <div class="container" id="cadastro">
         	<div th:replace="fragments/alert"></div>
-            <form th:action="@{/funcionarios/salvar}" th:object="${funcionario}" method="POST">
+            <form th:action="${funcionario.id == null} ? @{/funcionarios/salvar} : @{/funcionarios/editar}" 
+            	  th:object="${funcionario}" method="POST">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="nome">Nome do Funcionário</label>
@@ -118,7 +119,8 @@
                         <div class="invalid-feedback"></div>
                     </div>
                 </div>
-                <input type="hidden" id="id" name="id" value=""/>
+                <input type="hidden" id="id" th:field="*{id}"/>
+                <input type="hidden" id="endereco.id" th:field="*{endereco.id}"/>
                 <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
             </form>
         </div>
