Realizado ajuste no footer

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -108,7 +108,7 @@ body {
 	bottom: 0;
 	margin: 0;
 	height: 50px;
-	border-top: 1px solid #eeeeee;
+	border-top: 1px #eeeeee;
 }
 
 .footer-copy {
