--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -102,13 +102,13 @@ body {
  * Footer
  */
 .layout-footer {
-	position: fixed;
+	position: relative;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	margin: 0;
 	height: 50px;
-	border-top: 1px #eeeeee;
+	border-top: 1px solid#eeeeee;
 }
 
 .footer-copy {
