--- a/src/main/resources/templates/cargo/lista.html
+++ b/src/main/resources/templates/cargo/lista.html
@@ -51,6 +51,9 @@
                 </table>
                 <nav aria-label="Page navigation example">
 				  <ul class="pagination justify-content-center">
+				    <li class="page-item">
+				      <a class="page-link" th:href="@{/cargos/listar(page=${1})}" tabindex="-1">Primeira</a>
+				    </li>				  
 				    <li th:class="${pageCargo.pagina == 1} ? 'page-item disabled' : 'page-item'">
 				      <a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina - 1})}" tabindex="-1">Anterior</a>
 				    </li>
@@ -60,6 +63,9 @@
 				    <li th:class="${pageCargo.pagina == pageCargo.totalPaginas} ? 'page-item disabled' : 'page-item'">
 				      <a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina + 1})}">Próximo</a>
 				    </li>
+				    <li class="page-item">
+				      <a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.totalPaginas})}" tabindex="-1">Última</a>
+				    </li>					    
 				  </ul>
 				</nav>
             </div>
