--- a/src/main/resources/templates/cargo/lista.html
+++ b/src/main/resources/templates/cargo/lista.html
@@ -27,7 +27,15 @@
                     <thead>
 	                    <tr>
 	                        <th>#</th>
-	                        <th>Cargo</th>
+	                        <th>
+	                        	<a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina}, dir=DESC)}" tabindex="-1">
+	                        		<span class="oi oi-arrow-bottom"></span>
+                        		</a>
+	                        	Cargo
+	                        	<a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina}, dir=ASC)}" tabindex="-1">
+	                        		<span class="oi oi-arrow-top"></span>
+                        		</a>
+                        	</th>
 	                        <th>Departamento</th>
 	                        <th>Ação</th>
 	                    </tr>
