--- a/src/main/resources/templates/cargo/lista.html
+++ b/src/main/resources/templates/cargo/lista.html
@@ -28,11 +28,11 @@
 	                    <tr>
 	                        <th>#</th>
 	                        <th>
-	                        	<a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina}, dir=DESC)}" tabindex="-1">
+	                        	<a th:href="@{/cargos/listar(page=${pageCargo.pagina}, dir=DESC)}" tabindex="-1">
 	                        		<span class="oi oi-arrow-bottom"></span>
                         		</a>
 	                        	Cargo
-	                        	<a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina}, dir=ASC)}" tabindex="-1">
+	                        	<a th:href="@{/cargos/listar(page=${pageCargo.pagina}, dir=ASC)}" tabindex="-1">
 	                        		<span class="oi oi-arrow-top"></span>
                         		</a>
                         	</th>
