--- a/src/main/resources/templates/cargo/lista.html
+++ b/src/main/resources/templates/cargo/lista.html
@@ -60,19 +60,19 @@
                 <nav aria-label="Page navigation example">
 				  <ul class="pagination justify-content-center">
 				    <li class="page-item">
-				      <a class="page-link" th:href="@{/cargos/listar(page=${1})}" tabindex="-1">Primeira</a>
+				      <a class="page-link" th:href="@{/cargos/listar(page=${1}, dir=${pageCargo.direcao})}" tabindex="-1">Primeira</a>
 				    </li>				  
 				    <li th:class="${pageCargo.pagina == 1} ? 'page-item disabled' : 'page-item'">
-				      <a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina - 1})}" tabindex="-1">Anterior</a>
+				      <a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina - 1}, dir=${pageCargo.direcao})}" tabindex="-1">Anterior</a>
 				    </li>
 				    <li class="page-item">
 				    	<span class="page-link" th:text="|${pageCargo.pagina} de ${pageCargo.totalPaginas}|"></span>
 				    </li>
 				    <li th:class="${pageCargo.pagina == pageCargo.totalPaginas} ? 'page-item disabled' : 'page-item'">
-				      <a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina + 1})}">Próximo</a>
+				      <a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.pagina + 1}, dir=${pageCargo.direcao})}">Próximo</a>
 				    </li>
 				    <li class="page-item">
-				      <a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.totalPaginas})}" tabindex="-1">Última</a>
+				      <a class="page-link" th:href="@{/cargos/listar(page=${pageCargo.totalPaginas}, dir=${pageCargo.direcao})}" tabindex="-1">Última</a>
 				    </li>					    
 				  </ul>
 				</nav>
