--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
 					<button type="button" class="btn btn-dark navbar-toggle pull-left">
 						<i class="oi oi-menu"></i>
 					</button>
-					<a class="navbar-brand " href="#">EZB Soft</a>
+					<a class="navbar-brand " href="#">EZB Software</a>
 				</div>
 			</div>
 		</nav>
